--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 sudo: false
-
 language: ruby
-
 rvm:
-  - 1.9.3
   - 2.0.0
-
 cache: bundler
+before_script:
+  - git config --global user.email "marvin@nebo15.com"
+  - git config --global user.name "The Marvin"
+script:
+  - bundle exec rake publish
