Test with allow dirty

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ before_script:
   - git config --global user.email "marvin@nebo15.com"
   - git config --global user.name "The Marvin"
 script:
-  - bundle exec rake publish
+  - git status
+  - bundle exec rake publish ALLOW_DIRTY=true
