--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,4 @@ before_script:
   - git config --global user.name "The Marvin"
 script:
   - git status
-  - bundle exec rake publish ALLOW_DIRTY=true --trace
-  - bundle exec middleman build --clean --verbose
+  - bundle exec rake publish ALLOW_DIRTY=true
